[package]
name = "enodump"
authors = ["Maxime Augier <max@xolus.net>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
enocean = { git = "https://github.com/maugier/enocean" }
serialport = "4.2.0"
