[package]
name = "enodump"
authors = ["Maxime Augier <max@xolus.net>"]
version = "0.1.0"
edition = "2021"
description = "A pretty packet sniffer for EnOcean serial dongles"
repository = "https://github.com/maugier/enodump/"
license = "MIT AND Apache-2.0"
keywords = ["enocean"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
enocean = { git = "https://github.com/maugier/enocean" }
serialport = "4.2.0"
